--- a/HomeManager/View/Security/ucCredentialManagement.xaml
+++ b/HomeManager/View/Security/ucCredentialManagement.xaml
@@ -101,7 +101,10 @@
                         Width="224"
                         Height="20"
                         Text="{Binding FilterTekst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <Button Command="{Binding cmdFilter}" CommandParameter="{Binding}" Cursor="Hand">
+                    <Button
+                        Command="{Binding cmdFilter}"
+                        CommandParameter="{Binding}"
+                        Cursor="Hand">
                         <Button.Template>
                             <ControlTemplate>
                                 <Border Background="{StaticResource myBackground}">
