Laad filter after new one

--- a/HomeManager/View/Security/ucCredentialManagement.xaml
+++ b/HomeManager/View/Security/ucCredentialManagement.xaml
@@ -83,7 +83,7 @@
                     AutoGenerateColumns="False"
                     IsReadOnly="True"
                     ItemsSource="{Binding GefilterdeCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     SelectionUnit="FullRow">
 
                     <DataGrid.Columns>
