--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -66,12 +66,12 @@
         <StackPanel Grid.Row="0" Grid.Column="2">
             <Button
                 Name="RefreshButton"
-                Width="30"
-                Height="30"
+                Width="20"
+                Height="20"
                 Margin="0,20,40,0"
                 HorizontalAlignment="Right"
                 Command="{Binding RefreshCommand}"
-                Content="🔄"
+                Style="{StaticResource RefreshButton}"
                 ToolTip="Vernieuw de gegevens" />
         </StackPanel>
         <ListBox
