--- a/HomeManager/Resources/ErrorTemplateDictionary.xaml
+++ b/HomeManager/Resources/ErrorTemplateDictionary.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ControlTemplate x:Key="ErrorToolTipTemplate">
         <ControlTemplate.Resources>
             <Style x:Key="textblockErrorTooltip" TargetType="TextBlock">
@@ -12,13 +11,12 @@
         </ControlTemplate.Resources>
         <DockPanel LastChildFill="true">
             <Border
-            Height="Auto"
-            Margin="5,0,0,0"
-            Background="#DC000C"
-            CornerRadius="3"
-            DockPanel.Dock="Right">
-                <TextBlock Style="{StaticResource textblockErrorTooltip}" Text="{Binding ElementName=customAdorner, 
-                Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
+                Height="Auto"
+                Margin="5,0,0,0"
+                Background="#DC000C"
+                CornerRadius="3"
+                DockPanel.Dock="Right">
+                <TextBlock Style="{StaticResource textblockErrorTooltip}" Text="{Binding ElementName=customAdorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}" />
             </Border>
             <AdornedElementPlaceholder Name="customAdorner">
                 <Border BorderBrush="#DC000C" BorderThickness="1.3" />
