Update van de master 11032025

--- a/HomeManager/View/Budget/ucOverzicht.xaml
+++ b/HomeManager/View/Budget/ucOverzicht.xaml
@@ -110,6 +110,7 @@
                         Height="30"
                         Margin="5"
                         HorizontalAlignment="Right"
+                        CommandParameter="{Binding}"
                         Command="{Binding cmdExportToExcel}"
                         Style="{StaticResource Excel}" />
 
