--- a/HomeManager/Resources/StyleHamburgerMenu.xaml
+++ b/HomeManager/Resources/StyleHamburgerMenu.xaml
@@ -986,21 +986,44 @@
     <Storyboard x:Key="AnimatieMarginPowerButtonShow">
         <ThicknessAnimation
             Storyboard.TargetProperty="Margin"
-            From="30,0,0,0"
-            To="120,0,0,0"
+            From="-140,0,0,0"
+            To="123,0,0,0"
             Duration="0:0:0.3" />
     </Storyboard>
     <Storyboard x:Key="AnimatieMarginPowerButtonHide">
         <ThicknessAnimation
             Storyboard.TargetProperty="Margin"
-            From="30,0,0,0"
-            To="120,0,0,0"
+            From="123,0,0,0"
+            To="-140,0,0,0"
             Duration="0:0:0.3" />
     </Storyboard>
 
 
     <Style x:Key="MenuPowerIcon" TargetType="Button">
-        <Setter Property="IsHitTestVisible" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Name="HeaderBorder" Background="Transparent">                       
+                            <Path
+                            Width="10"
+                            Height="10"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Data="{StaticResource myPathPower}"
+                            Fill="{StaticResource MenuColorText}"
+                            IsHitTestVisible="False"
+                            Stretch="Uniform" />      
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger SourceName="HeaderBorder" Property="IsMouseOver" Value="True">
+                            <Setter Property="Cursor" Value="Hand" />                        
+                        </Trigger>   
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+     
         <Style.Triggers>
             <DataTrigger Binding="{Binding IsMenuVisible}" Value="true">
                 <DataTrigger.EnterActions>
